--- a/_posts/2019-07-13-the-us-narrative-today.html
+++ b/_posts/2019-07-13-the-us-narrative-today.html
@@ -2630,107 +2630,107 @@ stories:
   domain: http://www.stwnewspress.com/
   link: https://www.stwnewspress.com/news/city-council-to-consider-options-for-closed-th-street-bridge/article_dd7ed264-a50e-11e9-9f63-f72936bde5c6.html
 images:
-- name: nazi-invasion-IMG_1184.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_1184.jpg
-- name: dragon-desert-desert-dragon-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-creativity.jpg
-- name: server-cloud-server-racks-door-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-atari-missle.jpg
-- name: dc-statue-dcstatue-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-crunch-paper.jpg
-- name: walled-garden-walled-garden-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purp-paper.jpg
-- name: oldhouse-granaryfield-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-satan-red.jpg
-- name: razorwire-DSC-0080-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-alberto-giacometti.jpg
-- name: berlinwall2-berlinwall-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-plentiful.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-purp-paper.jpg
-- name: oldhouse-oldhouse-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-constitution.jpg
-- name: stories-new-42-16-600-500-0-max-1-1-2-0.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-42-16-600-500-0-max-1-1-2-0.jpg
-- name: death-valley-death-valley-national-park-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-mucha-mult.jpg
-- name: nyc-flag-nycflag-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-deep-connections.jpg
-- name: containership-containership-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-mucha-mult.jpg
-- name: san-francisco-street-view-san-francisco-street-view-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-electricity.jpg
+- name: old-door-lock-old-door-lock-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-matrix.jpg
+- name: locked-up-steam-lock-up-steam-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-really-hot.jpg
+- name: cargo-ship-cargo-ship-on-sea-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dark-dali.jpg
+- name: downtheline-downtheline-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-bright-sand.jpg
+- name: oldsmallboat-oldsmallboat-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-aqua.jpg
+- name: aws-s3-stories-sf-city-bridge-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-sf-city-bridge-copper-circuit.jpg
+- name: store-on-corner-store-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-yellow-collage.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor.jpg
+- name: powerlines-power-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-green-zuma.jpg
+- name: aws-s3-square-23-160-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-23-160-800-500-0-max-0--5--1.jpg
+- name: desert-dragon-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/desert-dragon-light-dali.jpg
+- name: christianity-christianity-under-construction-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-yellow-collage.jpg
+- name: power-lines-power-lines-empty-space-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-colorful-dream.jpg
+- name: subway-subway-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-internet-numbers.jpg
+- name: nyc-flag-api-conversations-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-atari-asteroids.jpg
+- name: legal-statue-legalstatue-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-crunch-paper.jpg
+- name: oldtrain-oldtrain-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-spagetti-accident.jpg
+- name: dc-statue-dcstatue-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-colorful-dream.jpg
+- name: san-francisco-street-view-san-francisco-street-view-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-ww2-dresden.jpg
+- name: beach-rocks-beach-rocks-currents-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-far-away.jpg
+- name: beach-clouds-lifeguard-beachclouds-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-purple-storm.jpg
+- name: aws-s3-stories-cargo-ship-on-sea-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-blue-circuit.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-clean-view.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-clean-view.JPG
+- name: curtain-curtain-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-crabapple.jpg
+- name: dragon-desert-desert-dragon-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-diego-rivera1.jpg
+- name: capital-battle-capitolbattle-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-light-dali.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-dark-soul.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-soul.JPG
+- name: fast-lights-freeway-redes-fast-flux-623x425-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-diego-rivera1.jpg
+- name: scream-DSC_0115.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0115.jpg
+- name: beach-rocks-beach-rocks-currents-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-rainbow-festival.jpg
+- name: sand-hand-sand-hand-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-neo-instinct.jpg
+- name: curtain-curtain-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-granite.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-granite.jpg
+- name: art-museum-art-museum-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-gan-vogh.jpg
+- name: aws-s3-stories-statue-face-open-mouth-blue-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-blue-circuit.png
+- name: gears-4882162452-fa3126b38d-b-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-blue-circuit.jpg
+- name: scream-IMG_7289.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7289.jpg
+- name: long-factory-uncle-sam.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/long-factory-uncle-sam.jpg
+- name: store-on-corner-store-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-monet-one.jpg
+- name: aws-s3-stories-docks-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-docks-copper-circuit.jpg
+- name: san-francisco-street-view-san-francisco-street-view-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-light-dali.jpg
+- name: border-crossing-bordercrossing-sunday.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-sunday.png
+- name: machine-road-machine-road-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-colorful-blocks.jpg
+- name: lincoln-memorial-lincolnmemorial-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-colorful-dream.jpg
+- name: curtain-curtain-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-colorful-blocks.jpg
+- name: downtown-los-angeles-downtown-la-alien-goggles.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-alien-goggles.JPG
+- name: stories-server-cloud1-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-server-cloud1-internet-numbers.jpg
+- name: scream-IMG_8331.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8331.jpg
+- name: flower-barbed-wire-flower-barbed-wire-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-granite.jpg
+- name: powerlines-power-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-crunch-paper.jpg
 - name: statue-face-open-mouth-statue-face-open-mouth-alberto-giacometti.png
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-alberto-giacometti.png
-- name: old-door-lock-old-door-lock-2-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-umberto-bocc.jpg
-- name: aws-s3-square-file-00-00-00-00-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-file-00-00-00-00-square.jpg
-- name: dc-statue-dcstatue-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-wols.jpg
-- name: downtown-trucksilo-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-electricity.jpg
-- name: docks-docks-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-deep-connections.jpg
-- name: catacombs-catacombs-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-colorful-dream.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-yellow-collage.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-yellow-collage.JPG
-- name: yosemite-yosemite-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-nazi-poster.jpg
-- name: old-granary-field-oldhouse-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-kandinsky-bv.jpg
-- name: oldhouse-granaryfield-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-kand-two.jpg
-- name: oldtrain-oldtrain-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-umberto-bocc.jpg
-- name: scream-IMG_8486.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8486.jpg
-- name: art-museum-art-museum-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-diego-rivera1.jpg
-- name: san-francisco-street-view-san-francisco-street-view-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-aqua.jpg
-- name: sand-hand-sand-hand-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-oily-mcoilface.jpg
-- name: berlinwall2-berlinwall-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-crafty-painting.jpg
-- name: oldsmallboat-oldsmallboat-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-light-dali.jpg
-- name: crow_marcel_duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_marcel_duchamp.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dark-soul.jpg
-- name: ellis-island-ellis-island-room-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dark-soul.jpg
-- name: castle-wall-DSC-0067-purple-storm.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-purple-storm.JPG
-- name: old-barn-old-barn-1500-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-mucha-mult.jpg
-- name: yosemite-yosemite-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-ww2-dresden.jpg
-- name: old-door-lock-old-door-lock-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-rainbow-festival.jpg
-- name: beach-clouds-lifeguard-beachclouds-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-monet-one.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-post-modern.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-jap-wav-pr.jpg
-- name: copper-circuit-DSC_0035-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0035-2.jpg
-- name: lincoln-memorial-lincolnmemorial-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-emily-carr.jpg
-- name: aws-s3-canyon-canyon-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-canyon-canyon-still.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-sand-paper.jpg
-- name: aws-s3-deserthills-deserthills-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-deserthills-deserthills-still-600.jpg
-- name: razorcliff-razorcliff-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-light-dali.jpg
-- name: scream-IMG_4833.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_4833.jpg
 ---
 Jordan Peele's Candyman Set To Begin Production.&nbsp;Master Gardener Groups Are Here To Help.&nbsp;Tips For Buying Electronic Components Online.&nbsp;County Attorney Talks New Hemp Law.&nbsp;Clark County Lifts Moratorium On Marijuana Businesses.&nbsp;California Soccer Trickster Brings Sand Tourney To New Michiana Home.&nbsp;First Sale Day At Broken Bow Livestock For New Owners.&nbsp;Camila Cabello 'looked Flirty' During Date.&nbsp;
